[build-system]
requires = ["setuptools>=45", "wheel", "twine"]
build-backend = "setuptools.build_meta"

[project]
name = "jslorm"
version = "1.0.0"
description = "Advanced JSON-based ORM for Python with async support, query builder, caching, and production-ready features"
readme = "README.md"
authors = [{name = "Support Bot Team", email = "support@example.com"}]
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["orm", "database", "json", "async", "query-builder", "cache"]
dependencies = [
    "pydantic>=1.8.0",
    "aiofiles>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-asyncio>=0.18.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
]

[project.scripts]
jslorm = "jslorm.cli:main"

[project.urls]
Homepage = ""
Repository = "https://github.com/dottenv/jslorm.git"
Documentation = "https://github.com/yourusername/jslorm#readme"
"Bug Tracker" = ""

[tool.setuptools.packages.find]
where = ["."]
include = ["jslorm*"]

[tool.setuptools.package-data]
jslorm = ["*.py"]